--- a/StitchLens.Web/Views/Home/Index.cshtml
+++ b/StitchLens.Web/Views/Home/Index.cshtml
@@ -103,7 +103,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6">
-                <h2 class="section-title">Why Stitchers Love StitchLens</h2>
+                <h2 class="section-title">Why Stitchers Love StitchPhoto</h2>
                 <p class="lead mb-4">
                     We're not just another pattern generator. We're made by stitchers, for stitchers.
                 </p>
