--- a/StitchLens.Web/Views/Pattern/Preview.cshtml
+++ b/StitchLens.Web/Views/Pattern/Preview.cshtml
@@ -158,7 +158,7 @@
                                 <i class="fas fa-arrow-up me-2"></i> Upgrade to Create More
                             </a>
                             <p class="quota-note">
-                                @if (Model.CurrentTier == SubscriptionTier.Free) {
+                                @if (Model.CurrentTier == SubscriptionTier.PayAsYouGo) {
                                     <text>Get 10-100 patterns per month!</text>
                                 }
                                 else {
